--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="jquery-3.6.0.min.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -17,7 +18,21 @@
     <input type="salary" placeholder="Annual Salary" id="annualSalary">
     <button id="submit">SUBMIT</button>
   </main>
+  
+  <table id="employeeTable">
+  <tr>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Employee ID</th>
+    <th>Title</th>
+    <th>Annual Salary</th>
+    <th>Delete</th>
+  </tr>
+</table>
+  <span>
+    <p id="monthlyCost">Total Monthly: </p>
+  </span>
+  
 </body>
 <script src="script.js"></script>
-<script src="jquery-3.6.0.min.js"></script>
 </html>
