--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="jquery-3.6.0.min.js"></script>
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
   <h1>Salary Calculator</h1>
@@ -36,3 +37,13 @@
 </body>
 <script src="script.js"></script>
 </html>
+
+
+
+
+  <!-- example on what my employeeRow is doing.
+  
+  <tr id="employeeRow">
+  <td>employee.firstName</td>
+  <td>employee.lastName</td>
+</tr> -->
