Woke up in the middle of the night with an idea for a code. Did not work

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
     <input type="Employee ID" placeholder="ID" id="employeeID">
     <input type="title" placeholder="Title" id="employeeTitle">
     <input type="salary" placeholder="Annual Salary" id="annualSalary">
-    <!-- <button id="submit">SUBMIT</button> -->
-    <button type="button" class="btn btn-outline-submit btn-sm">SUBMIT</button>
-    <!-- //trying out some bootstrap code but this isn't working and the submit 
-      button won't outline. Also my selector in javascript in onReady isn't working.
-      Employee won't submit. -->
+    <button id="submit">SUBMIT</button>
   </main>
   
   <table id="employeeTable">
